tests/e2e/unary_complexb.error
Error: syntax error in story at line 2, column 9

2|    a = not b
              ^

E0122: `int` can't be converted to `boolean`
